# framework.uifw.voice.tts

./: CMakeLists.txt  NOTICE  changelog  project.config  tts-config.xml  tts-server.manifest  tts-server.rule
TC/: config
TC/testcase/: Makefile  tslist  utc_tts.c
client/: CMakeLists.txt  tts.c  tts_client.c  tts_client.h  tts_dbus.c  tts_dbus.h  tts_main.h  tts_setting.c
common/: tts_config_mgr.c  tts_config_mgr.h  tts_config_parser.c  tts_config_parser.h  tts_defs.h
docs/: doxyfile  uix_tts_doc.h
include/: CMakeLists.txt  tts.h  tts_setting.h
packaging/: tts.spec
server/: CMakeLists.txt  ttsd_config.c  ttsd_config.h  ttsd_data.cpp  ttsd_data.h  ttsd_dbus.c  ttsd_dbus.h  ttsd_dbus_server.c  ttsd_dbus_server.h  ttsd_engine_agent.c  ttsd_engine_agent.h  ttsd_main.c  ttsd_main.h  ttsd_main_noti.c  ttsd_main_sr.c  ttsd_network.c  ttsd_network.h  ttsd_player.c  ttsd_player.h  ttsd_server.c  ttsd_server.h  ttsp.h
test/: CMakeLists.txt  test_main.c
